Light theme polish (#375)
* Separate application theme init from activity theme selection
* Add themed switch background color
* Update tabs screen to meet latest design
* Use neutral colors on startup and delete redundant themes
* Ensure browser toolbar shows on resume
* Ensure ripple color shows on toolbar
* Remove old home row related variant restrictions

--- a/app/src/main/res/layout/include_omnibar_toolbar.xml
+++ b/app/src/main/res/layout/include_omnibar_toolbar.xml
@@ -39,6 +39,7 @@
                 android:layout_width="0dp"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
+                android:theme="@style/OmnibarToolbarTheme"
                 app:contentInsetEnd="0dp"
                 app:contentInsetStart="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
