fix major trackers ordering in networks overview

--- a/app/src/main/res/layout/include_privacy_dashboard_header.xml
+++ b/app/src/main/res/layout/include_privacy_dashboard_header.xml
@@ -54,12 +54,13 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:letterSpacing="0.14"
         android:text="@string/privacyProtectionEnabled"
         android:textColor="@color/grayishTwo"
         android:textSize="12sp"
         android:textStyle="bold"
+        android:textAlignment="gravity"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/domain" />
