--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -54,6 +54,7 @@
     <color name="coolGray">#969799</color>
     <color name="subtleGray">#f0f0f0</color>
     <color name="subtleGrayTwo">#d8d8d8</color>
+    <color name="whiteSix">#e5e5e5</color>
 
     <color name="orange">#de5833</color>
     <color name="brickOrange">#d03a10</color>
