--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -82,6 +82,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">32dp</item>
         <item name="android:paddingBottom">14dp</item>
+        <item name="android:paddingStart">@dimen/settingsItemHorizontalPadding</item>
+        <item name="android:paddingEnd">@dimen/settingsItemHorizontalPadding</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textColor">@color/cornflowerBlue</item>
         <item name="android:textSize">12sp</item>
@@ -94,9 +96,11 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingStart">@dimen/settingsItemHorizontalPadding</item>
+        <item name="android:paddingEnd">@dimen/settingsItemHorizontalPadding</item>
         <item name="android:paddingBottom">10dp</item>
         <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textColor">?attr/settingsItemTextColor</item>
+        <item name="android:textColor">@color/settings_title_color_selector</item>
         <item name="android:textSize">17sp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:selectable">false</item>
@@ -112,8 +116,10 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">-7dp</item>
+        <item name="android:paddingStart">@dimen/settingsItemHorizontalPadding</item>
+        <item name="android:paddingEnd">@dimen/settingsItemHorizontalPadding</item>
         <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textColor">?attr/settingsMinorTextColor</item>
+        <item name="android:textColor">@color/settings_subtitle_color_selector</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
     </style>
