--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -32,6 +32,7 @@
     <attr name="bookmarkTitleTextColor" format="color" />
     <attr name="bookmarkSubtitleTextColor" format="color" />
     <attr name="settingsItemTextColor" format="color" />
+    <attr name="settingsItemTextColorDisabled" format="color" />
     <attr name="settingsMinorTextColor" format="color" />
     <attr name="settingsSwitchBackgroundColor" format="color" />
     <attr name="settingsDividerColor" format="color" />
