--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,8 +41,6 @@
     <color name="almostBlackDark">#222222</color>
     <color name="almostBlack">#333333</color>
 
-    <color name="disabledTextViewLightTheme">#55494949</color>
-    <color name="disabledTextViewDarkTheme">#55777777</color>
     <color name="grayishBrown">#494949</color>
     <color name="greyishBrownTwo">#444444</color>
     <color name="midGray">#555</color>
@@ -57,6 +55,7 @@
     <color name="subtleGray">#f0f0f0</color>
     <color name="subtleGrayTwo">#d8d8d8</color>
     <color name="whiteSix">#e5e5e5</color>
+    <color name="pinkish_grey_two">#c0c0c0</color>
 
     <color name="orange">#de5833</color>
     <color name="brickOrange">#d03a10</color>
