--- a/app/src/main/res/layout/include_survey_cta.xml
+++ b/app/src/main/res/layout/include_survey_cta.xml
@@ -19,7 +19,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/surveyCallToActionContainer"
-    android:layout_width="match_parent"
+    android:layout_width="0dp"
     android:layout_height="160dp"
     android:background="#303030"
     app:layout_constraintBottom_toBottomOf="parent"
@@ -38,10 +38,11 @@
 
     <TextView
         android:id="@+id/surveyTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/surveyBannerTitle"
-        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -57,6 +58,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:gravity="center_vertical"
         android:lineHeight="17sp"
         android:text="@string/surveyDescription"
         android:textColor="@color/grayish"
