--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -63,6 +63,7 @@
     <color name="denimBlue">#3d5599</color>
     <color name="cornflowerBlue">#678fff</color>
     <color name="skyBlue">#42bffe</color>
+    <color name="carolinaBlue">#94b0ff</color>
 
     <color name="lightOliveGreen">#93c04d</color>
     <color name="muddyGreen">#58732e</color>
