--- a/app/src/main/res/layout/activity_user_survey.xml
+++ b/app/src/main/res/layout/activity_user_survey.xml
@@ -26,7 +26,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/cornflowerBlue">
+        android:background="@drawable/survey_background">
 
         <TextView
             android:id="@+id/title"
@@ -55,13 +55,14 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/ic_close_24dp"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/carolinaBlue"
             app:layout_constraintBottom_toBottomOf="@id/title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/title" />
 
         <WebView
             android:id="@+id/webView"
+            android:background="@color/cornflowerBlue"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:lineSpacingExtra="4sp"
