--- a/app/src/main/res/layout/include_survey_cta.xml
+++ b/app/src/main/res/layout/include_survey_cta.xml
@@ -21,7 +21,7 @@
     android:id="@+id/surveyCallToActionContainer"
     android:layout_width="0dp"
     android:layout_height="160dp"
-    android:background="#303030"
+    android:background="?attr/colorPrimary"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent">
@@ -43,7 +43,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/surveyBannerTitle"
-        android:textColor="@color/white"
+        android:textColor="?attr/callToActionTitleColor"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@id/dismissSurveyButton"
@@ -61,7 +61,7 @@
         android:gravity="center_vertical"
         android:lineHeight="17sp"
         android:text="@string/surveyDescription"
-        android:textColor="@color/grayish"
+        android:textColor="?attr/callToActionSubtitleColor"
         android:textSize="13sp"
         app:layout_constraintBottom_toTopOf="@id/launchSurveyButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,7 +94,7 @@
         android:contentDescription="@string/surveyDismissBannerContentDescription"
         android:scaleType="center"
         android:src="@drawable/ic_close_24dp"
-        android:tint="#666"
+        android:tint="?attr/callToActionCloseButtonColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
