--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -35,5 +35,8 @@
     <attr name="settingsItemTextColor" format="color" />
     <attr name="settingsMinorTextColor" format="color" />
     <attr name="settingsSwitchBackgroundColor" format="color" />
+    <attr name="callToActionCloseButtonColor" format="color" />
+    <attr name="callToActionTitleColor" format="color" />
+    <attr name="callToActionSubtitleColor" format="color" />
 
 </resources>
