--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -53,6 +53,9 @@
         <item name="settingsItemTextColor">@color/white</item>
         <item name="settingsMinorTextColor">@color/grayishTwo</item>
         <item name="settingsSwitchBackgroundColor">@color/subtleGrayTwo</item>
+        <item name="callToActionCloseButtonColor">@color/brownishGrayTwo</item>
+        <item name="callToActionTitleColor">@color/white</item>
+        <item name="callToActionSubtitleColor">@color/grayishThree</item>
     </style>
 
     <style name="AppTheme.Dark" parent="AppTheme.BaseDark" />
@@ -96,6 +99,9 @@
         <item name="settingsItemTextColor">@color/grayishBrown</item>
         <item name="settingsMinorTextColor">@color/warmerGray</item>
         <item name="settingsSwitchBackgroundColor">@color/brownishGrayTwo</item>
+        <item name="callToActionCloseButtonColor">@color/pinkishGray</item>
+        <item name="callToActionTitleColor">@color/almostBlack</item>
+        <item name="callToActionSubtitleColor">@color/brownishGrayTwo</item>
     </style>
 
     <style name="AppTheme.Light" parent="AppTheme.BaseLight">
