--- a/app/src/main/res/layout/activity_user_survey.xml
+++ b/app/src/main/res/layout/activity_user_survey.xml
@@ -23,7 +23,7 @@
     android:layout_height="match_parent"
     tools:context="com.duckduckgo.app.feedback.ui.FeedbackActivity">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/survey_background">
@@ -72,7 +72,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
 
