--- a/app/src/main/res/layout/activity_user_survey.xml
+++ b/app/src/main/res/layout/activity_user_survey.xml
@@ -36,6 +36,7 @@
             android:gravity="center_horizontal"
             android:letterSpacing="0.18"
             android:paddingStart="30dp"
+            android:paddingEnd="30dp"
             android:paddingTop="22dp"
             android:paddingBottom="22dp"
             android:text="@string/surveyTitle"
@@ -82,25 +83,46 @@
             app:layout_constraintTop_toBottomOf="@id/title"
             app:layout_constraintVertical_bias="0.45" />
 
-        <TextView
+        <LinearLayout
             android:id="@+id/errorView"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
-            android:gravity="center_horizontal"
-            android:lineSpacingExtra="6sp"
+            android:orientation="vertical"
             android:paddingStart="30dp"
-            android:paddingTop="12dp"
+            android:paddingTop="16dp"
             android:paddingEnd="30dp"
-            android:paddingBottom="30dp"
-            android:text="@string/surveyLoadingErrorText"
-            android:textColor="@color/white"
-            android:textSize="16dp"
-            android:textStyle="normal"
-            android:visibility="gone"
+            android:paddingBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title"
-            app:layout_constraintVertical_bias="0.45" />
+            app:layout_constraintVertical_bias="0.34">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:fontFamily="sans-serif-medium"
+                android:lineSpacingExtra="-4sp"
+                android:text="@string/surveyLoadingErrorTitle"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="28sp"
+                android:textStyle="normal" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:lineSpacingExtra="8sp"
+                android:text="@string/surveyLoadingErrorText"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="normal" />
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
