--- a/app/src/main/res/layout/activity_user_survey.xml
+++ b/app/src/main/res/layout/activity_user_survey.xml
@@ -73,6 +73,7 @@
 
         <ProgressBar
             android:id="@+id/progress"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminateTint="@color/white"
