--- a/app/src/main/res/layout/include_survey_cta.xml
+++ b/app/src/main/res/layout/include_survey_cta.xml
@@ -22,6 +22,7 @@
     android:layout_width="0dp"
     android:layout_height="160dp"
     android:background="?attr/colorPrimary"
+    android:elevation="12dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent">
@@ -58,18 +59,19 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:gravity="center_vertical"
-        android:lineHeight="17sp"
+        android:gravity="top"
+        android:lineSpacingExtra="4sp"
         android:text="@string/surveyDescription"
         android:textColor="?attr/callToActionSubtitleColor"
         android:textSize="13sp"
         app:layout_constraintBottom_toTopOf="@id/launchSurveyButton"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/dismissSurveyButton"
         app:layout_constraintStart_toEndOf="@id/surveyIcon"
         app:layout_constraintTop_toBottomOf="@id/surveyTitle" />
 
     <Button
         android:id="@+id/launchSurveyButton"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
