--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -35,7 +35,7 @@
         android:id="@+id/clearingInProgressView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        android:background="?attr/colorPrimaryDark" />
+        android:background="?attr/colorPrimaryDark"
+        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
