--- a/app/src/main/res/drawable/button_outlined_bg.xml
+++ b/app/src/main/res/drawable/button_outlined_bg.xml
@@ -15,9 +15,8 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/modal_card_button_background" />
     <stroke
         android:width="1dp"
-        android:color="@color/modal_card_button_background" />
+        android:color="?attr/buttonOutlinedBorderColor" />
     <corners android:radius="3dp" />
 </shape>
