--- a/app/src/main/res/layout/include_cta.xml
+++ b/app/src/main/res/layout/include_cta.xml
@@ -20,7 +20,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ctaContainer"
     android:layout_width="0dp"
-    android:layout_height="160dp"
+    android:layout_height="154dp"
     android:background="?attr/colorPrimary"
     android:elevation="12dp"
     app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +31,10 @@
         android:id="@+id/ctaIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="16dp"
         android:importantForAccessibility="no"
         android:src="@drawable/survey_icon"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,63 +44,70 @@
         android:id="@+id/ctaTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="30dp"
         android:text="@string/surveyBannerTitle"
         android:textColor="?attr/callToActionTitleColor"
         android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@id/dismissButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/ctaIcon"
-        app:layout_constraintTop_toTopOf="@id/ctaIcon" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/ctaSubtitle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="30dp"
         android:gravity="top"
         android:lineSpacingExtra="4sp"
         android:text="@string/surveyDescription"
         android:textColor="?attr/callToActionSubtitleColor"
         android:textSize="13sp"
         app:layout_constraintBottom_toTopOf="@id/launchButton"
-        app:layout_constraintEnd_toStartOf="@id/dismissButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/ctaIcon"
         app:layout_constraintTop_toBottomOf="@id/ctaTitle" />
+
+    <Button
+        android:id="@+id/dismissButton"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="18dp"
+        android:background="@drawable/button_outlined_bg"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:text="@string/surveyDismissButton"
+        android:textColor="?attr/buttonOutlinedTextColor"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/launchButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ctaIcon" />
 
     <Button
         android:id="@+id/launchButton"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="22dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="22dp"
-        android:background="@drawable/modal_card_button_bg"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="18dp"
+        android:background="@drawable/button_contained_bg"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         android:text="@string/surveyLaunchButton"
         android:textColor="@color/white"
-        android:textSize="@dimen/modalCardMajorButtonTextSize"
-        android:transitionName="defaultBrowserBannerTransition"
+        android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/dismissButton"
         app:layout_constraintTop_toBottomOf="@id/ctaIcon" />
-
-    <ImageView
-        android:id="@+id/dismissButton"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
-        android:contentDescription="@string/surveyDismissBannerContentDescription"
-        android:scaleType="center"
-        android:src="@drawable/ic_close_24dp"
-        android:tint="?attr/callToActionCloseButtonColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
